--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,11 @@ build/
 msvc*
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
-!packages/*/build/
+# !packages/*/build/
 
 # MSTest test Results
-[Tt]est[Rr]esult*/
-[Bb]uild[Ll]og.*
+# [Tt]est[Rr]esult*/
+# [Bb]uild[Ll]og.*
 
 *_i.c
 *_p.c
